[gd_scene load_steps=5 format=3 uid="uid://gd0pslqbs0gy"]

[ext_resource type="Theme" uid="uid://bqdn1hl5c7fvl" path="res://themes/space-worm-theme/space_worm_theme.tres" id="1_1qts6"]
[ext_resource type="Script" uid="uid://cfyi86wvoutm6" path="res://chat_box.gd" id="2_o58gt"]
[ext_resource type="Script" uid="uid://c8np41snp0hhi" path="res://scripts/drag_button.gd" id="3_gvr4m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qts6"]
bg_color = Color(1, 1, 1, 1)

[node name="ChatBox" type="Panel"]
y_sort_enabled = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
grow_horizontal = 2
theme = ExtResource("1_1qts6")
script = ExtResource("2_o58gt")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -780.0
offset_top = -180.0
offset_right = 780.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1qts6")
horizontal_scroll_mode = 0

[node name="TextEdit" type="TextEdit" parent="ScrollContainer"]
custom_minimum_size = Vector2(1560, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_default_cursor_shape = 0
theme_override_colors/background_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
editable = false
selecting_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="ChatInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 1580.0
offset_bottom = -20.0
grow_vertical = 0
caret_blink = true

[node name="DragButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "V"
script = ExtResource("3_gvr4m")

[connection signal="mouse_entered" from="ScrollContainer/TextEdit" to="." method="_on_text_edit_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/TextEdit" to="." method="_on_text_edit_mouse_exited"]
[connection signal="text_changed" from="ScrollContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="editing_toggled" from="ChatInput" to="." method="_on_chat_input_editing_toggled"]
[connection signal="gui_input" from="ChatInput" to="." method="_on_chat_input_gui_input"]
[connection signal="button_down" from="DragButton" to="DragButton" method="_on_button_down"]
[connection signal="button_up" from="DragButton" to="DragButton" method="_on_button_up"]
[connection signal="pressed" from="DragButton" to="DragButton" method="_on_pressed"]
